tests/invalid_ast_samples/c04e4881fbbd2d7a352b4a103a55f894a6c4e7e2299211521c38ea34d1165d26.py
from ast import *

tree = Module(
    body=[
        Delete(
            targets=[
                Compare(
                    left=Name(id="name_5", ctx=Load()),
                    ops=[GtE(), IsNot()],
                    comparators=[Name(id="name_5", ctx=Load())],
                )
            ]
        )
    ],
    type_ignores=[],
)

# version: 3.12.0
#
# Source:
# del name_5 >= name_5
#
#
# Error:
#     SyntaxError('cannot delete comparison', ('<file>', 1, 5, 'del name_5 >= name_5\n', 1, 21))
